force-app/main/default/objects/Mig_FreeeInvoiceWork__c/Mig_FreeeInvoiceWork__c.object-meta.xml
<CustomObject>
    <description>Migration-only work object for importing existing freee invoices into Salesforce invoices.</description>
    <label>Freee請求移行Work</label>
    <nameField>
        <displayFormat>MFIW-{000000}</displayFormat>
        <label>Freee請求移行Work番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>