force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/BillingDate__c.field-meta.xml
<CustomField>
    <fullName>BillingDate__c</fullName>
    <label>請求日</label>
    <type>Date</type>
</CustomField>