force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/CreatedInvoice__c.field-meta.xml
<CustomField>
    <fullName>CreatedInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作成済み請求</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Freee請求移行Work</relationshipLabel>
    <relationshipName>MigFreeeInvoiceWorks</relationshipName>
    <type>Lookup</type>
</CustomField>