force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>外部キー</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>