force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/FreeeInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>FreeeInvoiceId__c</fullName>
    <label>Freee請求書ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>