force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/FreeeInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>FreeeInvoiceNumber__c</fullName>
    <label>Freee請求書番号</label>
    <length>80</length>
    <type>Text</type>
</CustomField>