force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/FreeePartnerId__c.field-meta.xml
<CustomField>
    <fullName>FreeePartnerId__c</fullName>
    <label>Freee取引先ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>