force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ImportStatus__c.field-meta.xml
<CustomField>
    <fullName>ImportStatus__c</fullName>
    <label>移行ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>取得済み</fullName>
                <default>true</default>
                <label>取得済み</label>
            </value>
            <value>
                <fullName>要確認</fullName>
            </value>
            <value>
                <fullName>反映可能</fullName>
            </value>
            <value>
                <fullName>反映済み</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
            </value>
            <value>
                <fullName>エラー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>