force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidAmount__c</fullName>
    <label>入金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>