force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/PartnerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerName__c</fullName>
    <label>Freee取引先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>