force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>支払期日</label>
    <type>Date</type>
</CustomField>