force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ProvisioningMessage__c.field-meta.xml
<CustomField>
    <fullName>ProvisioningMessage__c</fullName>
    <label>契約解決メッセージ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>