force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/RawJson__c.field-meta.xml
<CustomField>
    <fullName>RawJson__c</fullName>
    <label>Raw JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>