force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ResolutionAction__c.field-meta.xml
<CustomField>
    <fullName>ResolutionAction__c</fullName>
    <label>契約解決処理</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ExistingContract</fullName>
                <label>既存契約紐付け</label>
            </value>
            <value>
                <fullName>PeriodProvisioned</fullName>
                <label>契約期間補完</label>
            </value>
            <value>
                <fullName>ContractProvisioned</fullName>
                <label>継続契約自動作成</label>
            </value>
            <value>
                <fullName>OneTimeContractProvisioned</fullName>
                <label>単発契約自動作成</label>
            </value>
            <value>
                <fullName>NeedsReview</fullName>
                <label>要確認</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>