force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ResolvedAccount__c.field-meta.xml
<CustomField>
    <fullName>ResolvedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解決済み取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Freee請求移行Work</relationshipLabel>
    <relationshipName>MigFreeeInvoiceWorks</relationshipName>
    <type>Lookup</type>
</CustomField>