force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ResolvedContract__c.field-meta.xml
<CustomField>
    <fullName>ResolvedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解決済み契約管理</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Freee請求移行Work</relationshipLabel>
    <relationshipName>MigFreeeInvoiceWorks</relationshipName>
    <type>Lookup</type>
</CustomField>