force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ResolvedContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>ResolvedContractPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解決済み契約期間</label>
    <referenceTo>ContractPeriod__c</referenceTo>
    <relationshipLabel>Freee請求移行Work</relationshipLabel>
    <relationshipName>MigFreeeInvoiceWorks</relationshipName>
    <type>Lookup</type>
</CustomField>