force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/SendStatus__c.field-meta.xml
<CustomField>
    <fullName>SendStatus__c</fullName>
    <label>送付ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>送付待ち</fullName>
            </value>
            <value>
                <fullName>送付済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>