force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/TargetPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>TargetPeriodEndDate__c</fullName>
    <label>請求対象期間終了日</label>
    <type>Date</type>
</CustomField>