force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/TargetPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>TargetPeriodStartDate__c</fullName>
    <label>請求対象期間開始日</label>
    <type>Date</type>
</CustomField>