force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/UnpaidAmount__c.field-meta.xml
<CustomField>
    <fullName>UnpaidAmount__c</fullName>
    <label>未入金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>