force-app/main/default/objects/Mig_FreeeInvoiceWork__c/fields/ValidationMessage__c.field-meta.xml
<CustomField>
    <fullName>ValidationMessage__c</fullName>
    <label>検証メッセージ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>