force-app/main/default/objects/Mig_FreeeInvoiceWork__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FreeeInvoiceNumber__c</columns>
    <columns>PartnerName__c</columns>
    <columns>BillingDate__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>ImportStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>