force-app/main/default/objects/Mig_FreeeInvoiceWork__c/listViews/ImportedWorks.listView-meta.xml
<ListView>
    <fullName>ImportedWorks</fullName>
    <columns>NAME</columns>
    <columns>FreeeInvoiceNumber__c</columns>
    <columns>PartnerName__c</columns>
    <columns>BillingDate__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>CreatedInvoice__c</columns>
    <columns>ImportStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImportStatus__c</field>
        <operation>equals</operation>
        <value>反映済み</value>
    </filters>
    <label>反映済みfreee請求書取込Work</label>
</ListView>