force-app/main/default/objects/Mig_FreeeInvoiceWork__c/listViews/NeedsReview.listView-meta.xml
<ListView>
    <fullName>NeedsReview</fullName>
    <columns>NAME</columns>
    <columns>FreeeInvoiceNumber__c</columns>
    <columns>PartnerName__c</columns>
    <columns>BillingDate__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>ImportStatus__c</columns>
    <columns>ValidationMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImportStatus__c</field>
        <operation>equals</operation>
        <value>要確認</value>
    </filters>
    <label>要確認freee請求書取込Work</label>
</ListView>