force-app/main/default/objects/Mig_FreeeInvoiceWork__c/listViews/ReadyToImport.listView-meta.xml
<ListView>
    <fullName>ReadyToImport</fullName>
    <columns>NAME</columns>
    <columns>FreeeInvoiceNumber__c</columns>
    <columns>PartnerName__c</columns>
    <columns>BillingDate__c</columns>
    <columns>InvoiceAmount__c</columns>
    <columns>ResolvedAccount__c</columns>
    <columns>ResolvedContract__c</columns>
    <columns>ResolvedContractPeriod__c</columns>
    <columns>ImportStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImportStatus__c</field>
        <operation>equals</operation>
        <value>反映可能</value>
    </filters>
    <label>反映可能freee請求書取込Work</label>
</ListView>